# uidm_client

./: .gitignore  README.md  pyproject.toml  setup.py
src/uidm_client/: __init__.py  const.py  datamodel.py  endpoints.py
