[project]
name = "uidm_client"
version = "0.1"
authors = [
  { name="Dominik Åukasik", email="dmcode@outlook.com" },
]
description = "A very simple uidm client"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=40.9.0"]
build-backend = "setuptools.build_meta"
